added new images and updated user functions

--- a/new_user_functions.ipynb
+++ b/new_user_functions.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
     "        \n",
     "    #find cosine similarity for all sentences\n",
     "    similarities = cosine_similarity(trsfm, trsfm)\n",
-    "    \n",
+    "    #print(similarities)\n",
     "    #create list to hold avg cosine similarities for each sentence\n",
     "    avgs = []\n",
     "    for i in similarities:\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,15 +449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentences selected: [1, 6, 10, 11, 22, 24, 43]\n",
-      "Total sentences: 49\n"
+      "\n",
+      " Sentences selected: [1, 6, 10, 11, 22, 24, 43]\n",
+      "\n",
+      " Total sentences: 49\n"
      ]
     },
     {
@@ -466,7 +468,7 @@
        "'Swept out of the way, but not out of sight, it’s a stark reminder of the challenges residents of Koh Sdach island and the surrounding archipelago face in living harmoniously with their environment.. Just a five minute boat ride from mainland Cambodia, Koh Sdach is surrounded by clear blue waters that have sustained fishing communities for generations. But the plastic problem in these island communities is not just environmental. That doesn’t dissuade Oeun Sina, the loudest voice calling for better environmental practices on land and sea.. As deputy village chief on the island, Ms. Oeun Sina is trying to usher in a sea change in the way the 3,000 residents of her small fishing village see their island and the waters that surround it. She has taken it upon herself to educate her neighbors about recycling and trash disposal, and joins otherwise all-male community sea patrols in search of illegal fishing.. “I want my community to understand about plastics and not to fish illegally,” she says, sitting outside her house, as her three grandchildren play at her feet. Such price differences mean that there is no market in remote areas for plastic collection, explains Commune Chief Sok Chay.. “People here just throw everything away as there is no way to sell the plastic,” he says.. Old fishing nets full of empty beer and soft drink cans are common across the island.His response has been to instigate regular community cleanup days.. “Experts have told me that the plastic in the water is bad for our health, as the fish eat it and then we eat the fish. Some 30 students and 30 government people come to collect litter, plus a few people from the village,” he says.. Mr. Sok Chay sees no solution to the problem of waste and recycling other than burning waste. There will also be a focus on supporting the communities with their plastic and waste management problems.. For Mr. Sok Chay, the growing interest from the community and government in the long-term protection of the local environment is a source of pride.. “I am optimistic for the future.'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,13 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
     "def xgb_and_summary():\n",
     "    url = input('Enter a url: \\n')\n",
     "    text = get_article_text(url)\n",
+    "    print('\\n')\n",
     "    xgb_preprocess = xgb_text_prep(text)\n",
     "    print('This article was placed into cluster:', xgb.predict(xgb_preprocess)[0])\n",
     "    \n",
@@ -501,16 +504,19 @@
     "TEST ARTICLE 2 --- Donald Trump --- returns cluster 1\n",
     "https://news.yahoo.com/trump-says-d-foreigners-offer-233911079.html;_ylt=AwrC1C7Y8AddADIAoS_QtDMD;_ylu=X3oDMTEyaTE5czNyBGNvbG8DYmYxBHBvcwM0BHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
     "\n",
-    "TEST ARTICLE 3 --- Syria --- returns cluster --- 11\n",
+    "TEST ARTICLE 3 --- Syria --- returns cluster 11\n",
     "https://news.yahoo.com/turkish-outpost-syria-shelled-syrian-080926968.html;_ylt=AwrC0wwt8gdd2WgAkwHQtDMD;_ylu=X3oDMTEydGhybm9tBGNvbG8DYmYxBHBvcwMxBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
     "\n",
-    "TEST ARTICLE 4 --- Birth Control Health Insurance --- 3\n",
-    "https://news.yahoo.com/democrat-warren-wants-7-billion-134454649.html;_ylt=AwrC1DGZ8gddwlsAJwLQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-"
+    "TEST ARTICLE 4 --- Birth Control Health Insurance --- returns cluster 3\n",
+    "https://news.yahoo.com/democrat-warren-wants-7-billion-134454649.html;_ylt=AwrC1DGZ8gddwlsAJwLQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
+    "\n",
+    "TEST ARTICLE 5 --- Bernie Sanders --- returns cluster 3\n",
+    "https://news.yahoo.com/sanders-outline-democratic-socialism-means-045302693.html;_ylt=AwrC0CMD4whdTSoALAHQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -518,21 +524,23 @@
      "output_type": "stream",
      "text": [
       "Enter a url: \n",
-      "https://news.yahoo.com/turkish-outpost-syria-shelled-syrian-080926968.html;_ylt=AwrC0wwt8gdd2WgAkwHQtDMD;_ylu=X3oDMTEydGhybm9tBGNvbG8DYmYxBHBvcwMxBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
-      "This article was placed into cluster: 11\n",
+      "https://news.yahoo.com/sanders-outline-democratic-socialism-means-045302693.html;_ylt=AwrC0CMD4whdTSoALAHQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
       "\n",
-      " Sentences selected: [0, 5, 8, 11, 14]\n",
       "\n",
-      " Total sentences: 19\n"
+      "This article was placed into cluster: 3\n",
+      "\n",
+      " Sentences selected: [0, 1, 9, 11, 17, 20]\n",
+      "\n",
+      " Total sentences: 29\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'By Daren Butler ISTANBUL (Reuters) - A Turkish observation post in Syria\\'s Idlib region was attacked with mortar fire and shelling from an area controlled by Syrian government forces, causing damage but no casualties, the Turkish Defence Ministry said on Sunday. Russia, which supports Syrian President Bashar al-Assad in his country\\'s civil war, and Turkey, long a backer of rebels, co-sponsored a de-escalation agreement for the area that has been in place since last year. Cavusoglu said the latest \"aggression\" was contrary to the Idlib agreement which Turkey signed with Russia. Turkey blamed Syrian government forces for that earlier attack but Moscow said it was carried out by Assad\\'s rebel enemies. The region is home to hundreds of thousands of people who fled other parts of Syria as government forces advanced through the country since Moscow joined the war on the side of Assad in 2015, tipping the conflict in his favour.'"
+       "'WASHINGTON (AP) — Bernie Sanders on Wednesday mounted a strong defense of democratic socialism, the economic philosophy that has guided his political career, even as Republicans and some of his Democratic presidential opponents have seized on it to brand him as too radical. Sanders\\' speech, coming two weeks before the first debates of the Democratic primary, is his most aggressive attempt yet to reframe the conversation about his political views. During Wednesday\\'s speech at George Washington University, Sanders said Trump \"believes in corporate socialism for the rich and powerful,\" while he believes in \"a democratic socialism that works for the working families of this country.\" But few of the other Democrats seeking the White House share his support for democratic socialism. When Sanders entered the 2020 race in February, a spokeswoman for Trump\\'s campaign said Sanders had \"already won the debate in the Democrat primary because every candidate is embracing his brand of socialism\" and said Trump is the only candidate who will keep the country \"free, prosperous and safe.\" Sanders last spoke in depth about democratic socialism in November 2015.'"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
