--- a/new_user_functions.ipynb
+++ b/new_user_functions.ipynb
@@ -78,122 +78,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('df_with_gensim_summaries.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'title', 'author', 'year', 'month', 'category'], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>content</th>\n",
-       "      <th>len_article</th>\n",
-       "      <th>gensim_summary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>And never more so than in Showtime’s new...</td>\n",
-       "      <td>12219</td>\n",
-       "      <td>In the second season finale, back in 1991, the...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AlphaGo’s victory isn’t a defeat for hum...</td>\n",
-       "      <td>11068</td>\n",
-       "      <td>When speaking to DeepMind and Google developer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>How a weapon against war became a weapon...</td>\n",
-       "      <td>14088</td>\n",
-       "      <td>International visitors for the event are commo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Genius quietly laid off a bunch of its e...</td>\n",
-       "      <td>12170</td>\n",
-       "      <td>In a post on the Genius blog at the time, co-f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Inside the test flight of Facebook’s fir...</td>\n",
-       "      <td>11967</td>\n",
-       "      <td>But if your goal is to stay in the air for a l...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             content  len_article  \\\n",
-       "0        And never more so than in Showtime’s new...        12219   \n",
-       "1        AlphaGo’s victory isn’t a defeat for hum...        11068   \n",
-       "2        How a weapon against war became a weapon...        14088   \n",
-       "3        Genius quietly laid off a bunch of its e...        12170   \n",
-       "4        Inside the test flight of Facebook’s fir...        11967   \n",
-       "\n",
-       "                                      gensim_summary  \n",
-       "0  In the second season finale, back in 1991, the...  \n",
-       "1  When speaking to DeepMind and Google developer...  \n",
-       "2  International visitors for the event are commo...  \n",
-       "3  In a post on the Genius blog at the time, co-f...  \n",
-       "4  But if your goal is to stay in the air for a l...  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -229,22 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The handful of market stalls lining the narrow concrete path that serves as the island’s main artery offer the usual assortment of goods found across rural Cambodia: cheap noodles, stacks of Coca-Cola bottles, fake soccer jerseys, household cleaning products – and the plastic bags to carry them home. Littering the floor between piles of squeezed sugarcane and empty clam shells is an ocean of plastic wrappers, bottles, cups, straws, and empty bags. Swept out of the way, but not out of sight, it’s a stark reminder of the challenges residents of Koh Sdach island and the surrounding archipelago face in living harmoniously with their environment. Just a five minute boat ride from mainland Cambodia, Koh Sdach is surrounded by clear blue waters that have sustained fishing communities for generations. But decades of overfishing and indiscriminate waste disposal have taken a steep toll on the environment. Recommended: ‘He will eat a half-truth teller alive’: Marianne Williamson takes on Trump “It is well known that plastic waste harms our oceans,” says Marianne Teoh of Fauna & Flora International (FFI), a nonprofit environmental organization supporting coastal communities and partners in Cambodia to strengthen coastal resilience. “Cambodia is no exception, with trash littering the shore and sea turtle nesting beaches, and plastic bags and discarded plastic fishing nets smothering coral reefs. But the plastic problem in these island communities is not just environmental. Plastic pollution is a social issue that threatens the health and livelihoods of vulnerable communities that are often dependent on natural resources.” Awareness is slowly growing on Koh Sdach. But with limited environmental education, economic incentives, and law enforcement, waste management and conservation-minded fishing techniques are tough sells. That doesn’t dissuade Oeun Sina, the loudest voice calling for better environmental practices on land and sea. As deputy village chief on the island, Ms. Oeun Sina is trying to usher in a sea change in the way the 3,000 residents of her small fishing village see their island and the waters that surround it. She has taken it upon herself to educate her neighbors about recycling and trash disposal, and joins otherwise all-male community sea patrols in search of illegal fishing. “I want my community to understand about plastics and not to fish illegally,” she says, sitting outside her house, as her three grandchildren play at her feet. “I ask people who I think are interested to at least collect their trash, and take it to the dump up by the pagoda. ... Only 20% understand. Its difficult to explain things to them, as so few are well educated.” Ms. Oeun Sina didn’t finish high school herself. But what she lacks in formal education she makes up in passion and determination, no matter how futile it may seem. “I want my community to be clean, but people don’t care,” she says. “They have no understanding of how bad [their actions are] for the environment or their health. We even get teased when trying to arrange cleanups.” WHEN RECYCLING DOESN’T PAY Recycling is widespread across Cambodia but it is largely driven by financial needs rather than environmental concerns. Scavengers, mostly vulnerable migrants, pick through city garbage for metal, plastic, and cardboard to sell to dealers who then transport it to recycling plants in Vietnam or Thailand. On Koh Sdach, three empty beer cans fetch 5 cents, the same price as 1 kilogram, or 2.2 pounds, of plastic bottles. Such price differences mean that there is no market in remote areas for plastic collection, explains Commune Chief Sok Chay. “People here just throw everything away as there is no way to sell the plastic,” he says. Old fishing nets full of empty beer and soft drink cans are common across the island.His response has been to instigate regular community cleanup days. “Experts have told me that the plastic in the water is bad for our health, as the fish eat it and then we eat the fish. I gather people together to educate them about the problems of plastics – school kids, students, and government officials – to learn and then collect waste. Some 30 students and 30 government people come to collect litter, plus a few people from the village,” he says. Mr. Sok Chay sees no solution to the problem of waste and recycling other than burning waste. He has bigger environmental (and economic) issues on his mind, as local populations rise and fish stocks dwindle. “Illegal fishing from our own people using illegal tools to catch fish, as well as people from neighboring countries sneaking in to fish illegally [is a major challenge],” he says. “Then [there are added] environmental issues from tourism and modern life. It is hard to deal with the waste properly on the island and all the plastic that washes up on the shore.” COMMUNITY SEA PATROL Cambodia’s 280 mile coastline and surrounding waters support fishing, tourism, and salt-farming industries. While there is little data on marine life numbers, local communities report increasing difficulty in finding sufficient fish and shellfish to support their families. Pheng Chay oversees the community’s efforts to protect the fishing areas. Using a boat supplied by the Fisheries Administration and FFI, members of the community, accompanied by armed government officers, have started to patrol the waters around Koh Sdach about four times a month looking for illegal fishing activity and equipment. Ms. Oeun Sina regularly joins these patrols. “Mostly men go to sea here. Women have traditionally stayed at home [but Oeun Sina] is very involved. She is great. She is the only person who takes part all the time,” Mr.Pheng Chay notes, and the only woman in the 10-person community team. There are some 40 such community fisheries (CFi) organizations along the Cambodian coast, all aiming to support the communities that depend on the sea for their livelihoods. While the Koh Sdach CFi was founded in 2013, it only started regular patrols in 2019. Already the community teams have stopped and fined a number of Vietnamese boats using illegal nets, Mr. Pheng Chay explained. But with limited powers of arrest (and a quiet admission that they will be lenient on any Koh Sdach residents they stop), the effectiveness of the patrols is limited. Ms. Chhoeng Sotheavann says FFI is working with other nonprofits and Cambodian authorities to establish the country’s second marine protected area, after the success of conservation efforts around the nearby Koh Rong archipelago. The 156-square-mile Marine Fisheries Management Area around the two main islands of the archipelago took more than five years of government, NGO, and community work to create. Now three CFis help to protect the waters, corals, and ocean floor from harmful fishing practices, and ensure that threatened species can recover and future generations of residents and tourists can enjoy Cambodia’s rich marine environment. “Cambodian authorities and communities have asked for a similar model to be applied around Koh Sdach. The project will support the community in identifying areas of the archipelago that are critical fishing grounds and those that could be no-fish or no-entry areas to help habitat and stocks to recover,” Ms. Marianne Teoh says. There will also be a focus on supporting the communities with their plastic and waste management problems. For Mr. Sok Chay, the growing interest from the community and government in the long-term protection of the local environment is a source of pride. “I am optimistic for the future. From the national level to the local level, people care about Koh Sdach. People here are doing what they can, and I am confident that things will improve.” Related stories Read this story at csmonitor.com Become a part of the Monitor community '"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_article_text('https://news.yahoo.com/cambodia-islands-under-threat-woman-trying-save-them-144633896.html')\n",
+    "#get_article_text('https://news.yahoo.com/cambodia-islands-under-threat-woman-trying-save-them-144633896.html')\n",
     "\n"
    ]
   },
