cleaned models folder

--- a/Text_Cleaning_and_KMeans.ipynb
+++ b/Text_Cleaning_and_KMeans.ipynb
@@ -939,7 +939,7 @@
    "outputs": [],
    "source": [
     "#save kmeans12 model for further use\n",
-    "pickle.dump(kmeans12, open(\"save.pkl\", \"wb\"))"
+    "pickle.dump(kmeans12, open(\"kmeans12.pkl\", \"wb\"))"
    ]
   },
   {
@@ -949,7 +949,7 @@
    "outputs": [],
    "source": [
     "#load back in kmeans12 model\n",
-    "#kmeans = pickle.load(open(\"save.pkl\", \"rb\"))"
+    "#kmeans = pickle.load(open(\"kmeans12.pkl\", \"rb\"))"
    ]
   },
   {
