--- a/new_user_functions.ipynb
+++ b/new_user_functions.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "'Swept out of the way, but not out of sight, it’s a stark reminder of the challenges residents of Koh Sdach island and the surrounding archipelago face in living harmoniously with their environment.. Just a five minute boat ride from mainland Cambodia, Koh Sdach is surrounded by clear blue waters that have sustained fishing communities for generations. But the plastic problem in these island communities is not just environmental. That doesn’t dissuade Oeun Sina, the loudest voice calling for better environmental practices on land and sea.. As deputy village chief on the island, Ms. Oeun Sina is trying to usher in a sea change in the way the 3,000 residents of her small fishing village see their island and the waters that surround it. She has taken it upon herself to educate her neighbors about recycling and trash disposal, and joins otherwise all-male community sea patrols in search of illegal fishing.. “I want my community to understand about plastics and not to fish illegally,” she says, sitting outside her house, as her three grandchildren play at her feet. Such price differences mean that there is no market in remote areas for plastic collection, explains Commune Chief Sok Chay.. “People here just throw everything away as there is no way to sell the plastic,” he says.. Old fishing nets full of empty beer and soft drink cans are common across the island.His response has been to instigate regular community cleanup days.. “Experts have told me that the plastic in the water is bad for our health, as the fish eat it and then we eat the fish. Some 30 students and 30 government people come to collect litter, plus a few people from the village,” he says.. Mr. Sok Chay sees no solution to the problem of waste and recycling other than burning waste. There will also be a focus on supporting the communities with their plastic and waste management problems.. For Mr. Sok Chay, the growing interest from the community and government in the long-term protection of the local environment is a source of pride.. “I am optimistic for the future.'"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -397,23 +397,23 @@
      "output_type": "stream",
      "text": [
       "Enter a url: \n",
-      "https://news.yahoo.com/sanders-outline-democratic-socialism-means-045302693.html;_ylt=AwrC0CMD4whdTSoALAHQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
+      "https://news.yahoo.com/democrat-warren-wants-7-billion-134454649.html;_ylt=AwrC1DGZ8gddwlsAJwLQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
       "\n",
       "\n",
       "This article was placed into cluster: 3\n",
       "\n",
-      " Sentences selected: [0, 1, 9, 11, 17, 20]\n",
+      " Sentences selected: [0, 5, 7, 9]\n",
       "\n",
-      " Total sentences: 29\n"
+      " Total sentences: 12\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'WASHINGTON (AP) — Bernie Sanders on Wednesday mounted a strong defense of democratic socialism, the economic philosophy that has guided his political career, even as Republicans and some of his Democratic presidential opponents have seized on it to brand him as too radical. Sanders\\' speech, coming two weeks before the first debates of the Democratic primary, is his most aggressive attempt yet to reframe the conversation about his political views. During Wednesday\\'s speech at George Washington University, Sanders said Trump \"believes in corporate socialism for the rich and powerful,\" while he believes in \"a democratic socialism that works for the working families of this country.\" But few of the other Democrats seeking the White House share his support for democratic socialism. When Sanders entered the 2020 race in February, a spokeswoman for Trump\\'s campaign said Sanders had \"already won the debate in the Democrat primary because every candidate is embracing his brand of socialism\" and said Trump is the only candidate who will keep the country \"free, prosperous and safe.\" Sanders last spoke in depth about democratic socialism in November 2015.'"
+       "'By Ginger Gibson WASHINGTON (Reuters) - Democratic presidential hopeful Elizabeth Warren is proposing creating a $7 billion fund to provide grants to help more minorities start their own business, she announced on Friday. The fund would provide grants - not loans or loan guarantees - to minority entrepreneurs, Warren is proposing. Warren would have the program administered by state and local governments. Additionally, Warren wants to require the states and local governments administering her program to hire more minority investment managers.'"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
