--- a/Notebooks/new_user_functions.ipynb
+++ b/Notebooks/new_user_functions.ipynb
@@ -19,45 +19,33 @@
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from gensim.summarization.summarizer import summarize\n",
     "import pickle\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
     "from nltk import sent_tokenize, word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import nltk\n",
     "import re\n",
-    "import os\n",
-    "import codecs\n",
     "from sklearn import feature_extraction\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from sklearn.metrics import pairwise_distances_argmin_min\n",
-    "import nltk\n",
-    "nltk.download('punkt')\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction import text\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import numpy as np\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction import text\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.cluster import KMeans\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from langdetect import detect\n",
-    "from nltk.stem import PorterStemmer\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "from nltk.corpus import words\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "import ast"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -239,6 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function for xgboost prdiction\n",
     "def get_xgb_prediction(text):\n",
     "    preprocess = text_prep([text])\n",
     "    return xgb.predict(preprocess)[0]"
@@ -246,23 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_xgb_prediction(test_1_preprocess)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -270,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#find cosine similarities between sentences\n",
     "def find_similarities(text):\n",
     "    #tokenize sentences\n",
     "    sentences = sent_tokenize(text, language = 'en')\n",
